# CefViewCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  CefConfig.cmake  LICENSE  gen-linux-arm.sh  gen-linux-arm64.sh  gen-linux-x64.sh  gen-linux-x86.sh  gen-mac-arm64.sh  gen-mac-x64.sh  gen-win-arm64.bat  gen-win-x64.bat  gen-win-x86.bat  generate-mac-proj.sh  generate-win-proj.bat  linux-arm-gen.sh  linux-arm64-gen.sh  linux-x86-gen.sh  linux-x86_64-gen.sh  mac-arm64-gen.sh  mac-x86_64-gen.sh  readme.md  win-arm64-gen.bat  win-x86-gen.bat  win-x86_64-gen.bat
.github/workflows/: build-linux-arm64.yml  build-linux-x86_64.yml  build-macos-x86_64.yml  build-windows-x86_64.yml
cmake/: DownloadCef.cmake  SetupCef.cmake
dep/: readme.md
include/: CefViewBrowserApp.h  CefViewBrowserAppDelegate.h  CefViewBrowserClient.h  CefViewBrowserClientDelegate.h  CefViewBrowserDelegate.h  CefViewBrowserHandler.h  CefViewBrowserHandlerDelegate.h  CefViewCoreGlobal.h  CefViewCoreProtocol.h  CefViewCoreProtocol.h.in  CefViewQueryHandler.h  CefViewWingProcessName.h  CefViewWingProcessName.h.in
src/: CMakeLists.txt  CefVersion.h.in
src/CefView/CefBrowserApp/: CefViewBrowserApp.cpp  CefViewBrowserAppHelper.cpp  CefViewBrowserClient.cpp  CefViewBrowserClient_ContextMenuHandler.cpp  CefViewBrowserClient_DialogHandler.cpp  CefViewBrowserClient_DisplayHandler.cpp  CefViewBrowserClient_DownloadHandler.cpp  CefViewBrowserClient_DragHandler.cpp  CefViewBrowserClient_FindHandler.cpp  CefViewBrowserClient_FocusHandler.cpp  CefViewBrowserClient_JSDialogHandler.cpp  CefViewBrowserClient_KeyboardHandler.cpp  CefViewBrowserClient_LifeSpanHandler.cpp  CefViewBrowserClient_LoadHandler.cpp  CefViewBrowserClient_RenderHandler.cpp  CefViewBrowserClient_RequestHandler.cpp  CefViewBrowserClient_ResourceRequestHandler.cpp  CefViewBrowserHandler.cpp  CefViewQueryHandler.cpp
src/CefView/CefBrowserApp/CefViewDirectoryProvider/: CefViewDirectoryProvider.cpp  CefViewDirectoryProvider.h  CefViewStreamResourceHandler.cpp  CefViewStreamResourceHandler.h
src/CefView/CefBrowserApp/CefViewQueryHandler/: CefViewQueryHandler.cpp  CefViewQueryHandler.h
src/CefView/CefBrowserApp/CefViewSchemeHandler/: CefViewSchemeHandler.cpp  CefViewSchemeHandler.h  CefViewSchemeHandlerFactory.cpp  CefViewSchemeHandlerFactory.h
src/CefView/CefBrowserApp/FaviconDownload/: CefViewFaviconDownloadCallback.h
src/CefView/CefBrowserApp/SchemeHandlers/: CefViewDefaultSchemeHandler.cpp  CefViewDefaultSchemeHandler.h
src/CefWing/App/: CefViewAppBase.cpp  CefViewAppBase.h  CefViewOtherApp.cpp  CefViewOtherApp.h  CefViewRenderApp.cpp  CefViewRenderApp.h
src/CefWing/Bridge/: CefViewBridgeObject.cpp  CefViewBridgeObject.h
src/CefWing/CefRenderApp/: CefViewAppBase.cpp  CefViewAppBase.h  CefViewOtherApp.cpp  CefViewOtherApp.h  CefViewRenderApp.cpp  CefViewRenderApp.h
src/CefWing/CefRenderApp/RenderDelegates/: CefViewClient.cpp  CefViewClient.h  CefViewDefaultRenderDelegate.cpp  CefViewDefaultRenderDelegate.h
src/CefWing/linux/: main.cpp
src/CefWing/mac/: CefViewWing.entitlements  Info.plist  main.mm
src/CefWing/win/: main.cpp  resource.rc.in
src/Shared/Common/: CefViewCoreLog.cpp  CefViewCoreLog.h  CefViewDebug.cpp  CefViewDebug.h
